# sample-eks-microservice

./: .gitignore  Makefile  README.md
.github/workflows/: build-image.yml  deploy.yml
app/: .dockerignore  Dockerfile  README.md  pyproject.toml
app/src/sample_service/: config.py  logging.py  main.py  metrics.py
app/src/sample_service/routes/: health.py  root.py
app/tests/: test_routes.py
deploy/: README.md
deploy/charts/microservice/: Chart.yaml  values.yaml
deploy/charts/microservice/dashboards/: microservice.json
deploy/charts/microservice/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  grafana-dashboard-cm.yaml  ingress.yaml  service.yaml  servicemonitor.yaml
deploy/ingress-controller/: values.yaml
deploy/monitoring/: values.yaml
infra/: README.md
infra/bootstrap/: bootstrap.sh
infra/envs/dev/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
